--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@ body {
   /* font-family: Arial, Helvetica, sans-serif; */
   font-family: var(--font-bebas-nue);
   opacity: 0;
-  animation: fadeIn 0.5s ease-in-out forwards;
+  animation: fadeIn 0.9s ease-in-out forwards;
 }
 @keyframes fadeIn {
   from {
@@ -83,23 +83,49 @@ body {
   }
 }
 
-@keyframes bgChange {
-  0% {
+/* @keyframes bgChange { */
+/* 0% {
     background-image: url('/assets/1.jpg');
-  }
-  33% {
+  } */
+/* 33% {
     background-image: url('/assets/2.jpg');
   }
   66% {
     background-image: url('/assets/3.jpg');
+  } */
+/* 100% { */
+/* background-image: url('/assets/bg-image.jpg'); */
+/* } */
+/* } */
+
+@keyframes note {
+  0% {
+    transform: translate(0%, 0);
   }
   100% {
-    background-image: url('/assets/4.jpg');
+    transform: translate(-100%, 0);
   }
 }
 
+.linespace {
+  letter-spacing: 0.8rem;
+}
+
+.note {
+  animation: note ease-in-out infinite;
+  animation-name: note;
+  animation-timing-function: linear;
+  width: max-content;
+  display: flex;
+  overflow: hidden;
+  white-space: nowrap;
+  animation-duration: 40s;
+  animation-iteration-count: infinite;
+}
+
 .animate-bg-change {
-  animation: bgChange 10s infinite;
+  /* animation: bgChange 10s infinite; */
+  background-image: url('/assets/bg-image1.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -108,7 +134,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  opacity: 0.3;
+  opacity: 0.9;
   z-index: 0;
 }
 
