--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@ body {
   font-family: var(--font-bebas-nue);
   opacity: 0;
   animation: fadeIn 0.9s ease-in-out forwards;
+  margin: 0;
+  padding: 0;
 }
 @keyframes fadeIn {
   from {
