--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,20 +85,24 @@ body {
   }
 }
 
-/* @keyframes bgChange { */
-/* 0% {
-    background-image: url('/assets/1.jpg');
-  } */
-/* 33% {
+@keyframes bgChange {
+  0% {
+    background-image: url('/Picture1.png');
+  }
+  33% {
     background-image: url('/assets/2.jpg');
   }
   66% {
     background-image: url('/assets/3.jpg');
-  } */
-/* 100% { */
-/* background-image: url('/assets/bg-image.jpg'); */
-/* } */
-/* } */
+  }
+  100% {
+    background-image: url('/assets/4.jpg');
+  }
+}
+
+/* .stock-ticker {
+  
+} */
 
 @keyframes note {
   0% {
@@ -113,6 +117,15 @@ body {
   letter-spacing: 0.8rem;
 }
 
+@keyframes typing {
+  from {
+    width: 0;
+  }
+}
+.text-animate {
+  animation: typing 4s, cursor 0.4s step-end infinite alternate;
+}
+
 .note {
   animation: note ease-in-out infinite;
   animation-name: note;
@@ -121,13 +134,13 @@ body {
   display: flex;
   overflow: hidden;
   white-space: nowrap;
-  animation-duration: 40s;
+  animation-duration: 4s;
   animation-iteration-count: infinite;
 }
 
 .animate-bg-change {
-  /* animation: bgChange 10s infinite; */
-  background-image: url('/Picture1.png');
+  animation: bgChange 10s infinite;
+  /* background-image: url('/Picture1.png'); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
