--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,10 +87,10 @@ body {
 
 @keyframes bgChange {
   0% {
-    background-image: url('/assets/2.jpg');
+    background-image: url('/Picture1.png');
   }
   33% {
-    background-image: url('/Picture1.png');
+    background-image: url('/assets/2.jpg');
   }
   66% {
     background-image: url('/assets/3.jpg');
@@ -120,14 +120,14 @@ body {
   letter-spacing: 0.8rem;
 }
 
-@keyframes typing {
+/* @keyframes typing {
   from {
     width: 0;
   }
 }
 .text-animate {
   animation: typing 4s, cursor 0.4s step-end infinite alternate;
-}
+} */
 
 .note {
   animation: note ease-in-out infinite;
