--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,6 +113,16 @@ body {
 
 .project-bg {
   background-image: url('/assets/21.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  /* opacity: 0.75; */
+  z-index: 0;
 }
 
 @keyframes note {
