--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,6 +111,24 @@ body {
   
 } */
 
+.image-container {
+  width: 100%;
+  padding-top: 75%; /* 4:3 aspect ratio */
+  position: relative;
+  overflow: hidden;
+  border-radius: 0.5rem; /* Match your design's border radius */
+}
+
+.image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: inherit;
+}
+
 .loader {
   border-color: #e5e7eb;
   border-top-color: #3b82f6; /* Spinner color */
