--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -103,7 +103,7 @@ body {
 
 @keyframes bgChange {
   0% {
-    background-image: url('/Picture1.png');
+    background-image: url('/Picture1.jpg');
   }
   33% {
     background-image: url('/assets/2.jpg');
